# storewide-loss-prevention

./: .gitignore  .gitmodules  README.md  design.txt  setup.sh  suspicious-activity-detection.drawio
.github/ISSUE_TEMPLATE/: bug.yaml  config.yml
.github/prompts/: docker.prompt.md  system-design.prompt.md
.github/workflows/: trivy-scan.yaml  trivyimagescan.yaml  update-submodule.yaml
configs/: .env.example  zone_config.json
docker/: docker-compose.yaml
docs/architecture-decisions/: ADR-001-rule-engine-as-library.md  ADR-002-scene-intelligence-architecture.md
person-of-interest/: .env.example  .gitignore  Makefile  README.md  docker-compose.npu-overrides.yml  docker-compose.scenescape-overrides.yml  docker-compose.yml  requirement.md
person-of-interest/backend/: Dockerfile  main.py
person-of-interest/docker/: .env  (+1 more)
scenescape/: Makefile  README.md  docker-compose.yaml
src/: Dockerfile  docker-entrypoint.sh
suspicious-activity-detection/: .gitignore  Makefile  README.md  sources.Dockerfile  stream_density.py
suspicious-activity-detection/behavioral-analysis/: Dockerfile  README.md  pyproject.toml  requirements.txt
suspicious-activity-detection/behavioral-analysis/config/: patterns.yaml
suspicious-activity-detection/behavioral-analysis/src/: __init__.py  ba_queue.py  config.py  frame_store.py  gst_pipeline.py  main.py  pose_analyzer.py  pose_logger_rtmpose.py  pose_rule_engine.py  seaweedfs_client.py  vlm_client.py  yolo_pipeline.py  yolo_pose_ov.py
suspicious-activity-detection/behavioral-analysis/tests/: __init__.py  test_pose_analyzer.py
(+214 files in other folders)
