[project]
name = "behavioral-analysis"
version = "1.0.0"
description = "Pose-based suspicious activity detection service"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "ultralytics>=8.1.0",  # YOLO-Pose
    "opencv-python>=4.9.0",
    "numpy>=1.26.0",
    "aioboto3>=12.0.0",  # Async S3 client for SeaweedFS
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",  # For testing FastAPI
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
